fix font-size trouble on iOS Safari

--- a/css/reset.css
+++ b/css/reset.css
@@ -10,6 +10,7 @@
 	padding: 0;
 	margin: 0;
 	}
+body { -webkit-text-size-adjust: 100%;}
 h1, h2, h3, h4 { font-weight: normal;}
 a:link, a:visited { text-decoration: underline;}
 a:hover, a:active { text-decoration: none;}
